--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-fs": "^2.20.0",
+    "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^1.4.0"
   },
   "devDependencies": {
